--- a/russellStyle.css
+++ b/russellStyle.css
@@ -2,7 +2,7 @@ body
 {
 font-size:75%;
 font-family:verdana,arial,'sans serif';
-background-color:#FFFFF0;
+background-image:url("http://bgfons.com/upload/wood%20_texture556.jpg");
 color:#000080;
 margin:10px;
 }
