--- a/russellStyle.css
+++ b/russellStyle.css
@@ -18,11 +18,12 @@ h3 {font-size:110%;}
 }
 .header
 {
-	height:50px;
+	height:40px;
 	border:1px solid #CCC;
 	background:#FFF;
 	margin:0px auto;
 	width:90%;
+
 }
 
 .content
@@ -32,4 +33,8 @@ h3 {font-size:110%;}
 	border: 1px solid #CCC;
 	background:#FFF;
 	margin: 70px auto;
+}
+table, th, td
+{
+	margin-top:-20px;
 }
